--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # BANCO DE DADOS MYSQL
 spring.datasource.url=jdbc:mysql://localhost:3306/MALLTOY?createDatabaseIfNotExist=true&useSSL=false
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=developer
+spring.datasource.password=jacasei0
 
 # JPA - HIBERNATE
 spring.jpa.show-sql=true
