Implementação do modulo categoria, produto e alunos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # BANCO DE DADOS MYSQL
 spring.datasource.url=jdbc:mysql://localhost:3306/MALLTOY?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=developer
-spring.datasource.password=jacasei0
+spring.datasource.password=admin
 
 # JPA - HIBERNATE
 spring.jpa.show-sql=true
